--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node ./dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -44,6 +44,7 @@
     "eslint": "8.42.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-security": "1.4.0",
     "jest": "29.5.0",
     "prettier": "3.0.0",
     "source-map-support": "0.5.21",
@@ -52,7 +53,8 @@
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "lint-staged": "12.3.7"
   },
   "jest": {
     "moduleFileExtensions": [
