--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,9 @@
     "@nestjs/core": "10.0.0",
     "@nestjs/platform-express": "10.0.0",
     "@nestjs/typeorm": "10.0.2",
+    "bcrypt": "5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "pg": "8.12.0",
     "postgres": "3.4.4",
     "reflect-metadata": "0.2.0",
@@ -46,6 +49,7 @@
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-security": "1.4.0",
     "jest": "29.5.0",
+    "lint-staged": "12.3.7",
     "prettier": "3.0.0",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
@@ -53,8 +57,7 @@
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3",
-    "lint-staged": "12.3.7"
+    "typescript": "5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
