--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node ./dist/main.js",
-    "start:dev": "nest start --watch",
+    "start:dev": "env-cmd -f .env nest start --path ./tsconfig.server.json --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "dev": "yarn start"
+    "dev": "yarn start:dev"
   },
   "dependencies": {
     "@nestjs/common": "10.0.0",
@@ -58,7 +58,8 @@
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "env-cmd": "10.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
