--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,13 +22,18 @@
   },
   "dependencies": {
     "@nestjs/common": "10.0.0",
-    "@nestjs/config": "^3.2.3",
+    "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.0.0",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.0.0",
     "@nestjs/typeorm": "10.0.2",
     "bcrypt": "5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "8.12.0",
     "postgres": "3.4.4",
     "reflect-metadata": "0.2.0",
@@ -45,6 +50,7 @@
     "@types/supertest": "6.0.0",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
+    "env-cmd": "10.1.0",
     "eslint": "8.42.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
@@ -58,8 +64,7 @@
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3",
-    "env-cmd": "10.1.0"
+    "typescript": "5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
