--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
