--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components": ["src/components/index.ts"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@services": ["src/services/index"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
