--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-socket.io": "^10.3.10",
     "@nestjs/typeorm": "10.0.2",
     "@nestjs/websockets": "^10.3.10",
+    "@types/bcrypt": "^5.0.2",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
